RESOLVED FIXED303218
SVG length parsing fails with leading/trailing whitespace and negative values
https://bugs.webkit.org/show_bug.cgi?id=303218
Summary SVG length parsing fails with leading/trailing whitespace and negative values
Ahmad Saleem
Reported 2025-11-27 16:46:56 PST
We were failing to handle SVG lengths with leading and trailing whitespaces and this fixes it.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-27 16:47:04 PST
Ahmad Saleem
Comment 2 2025-11-27 16:50:53 PST
Ahmad Saleem
Comment 3 2025-11-27 17:01:39 PST
https://jsfiddle.net/2b43fprz/ -> whitespace-length.html (704 -> full pass)
EWS
Comment 4 2025-12-04 19:17:48 PST
Committed 303951@main (aaa4976475c3): <https://commits.webkit.org/303951@main> Reviewed commits have been landed. Closing PR #54539 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.